Support some MVP document specs
